[package]
name = "planetarium"
version = "0.1.0"
authors = ["Антон Синицын <antony@email.su>"]
edition = "2018"

[dependencies]
reqwest     = "0.9.17"
futures     = "0.1.27"
hyper       = "0.10"
hyper-rustls= "0.6"

image       = "0.21"
chrono      = { version = "0.4", features = ["serde"] }
log         = "0.4"
env_logger  = "0.6.1"
dirs        = "1.0"

serde       = "1.0"
serde_derive= "1.0"
serde_json  = "1.0"

lazy_static = "1.3.0"
regex       = "1"
rand        = "0.6"
num_cpus    = "1.10"
xml-rs      = "0.8"
assert      = "0.7"

gtk         = "0.6.0"
cairo-rs    = "0.6.0"
pango       = "0.6.0"
pangocairo  = "0.7.0"
gdk         = "0.10.0"
gdk-sys     = "0.8.0"
gdk-pixbuf  = "0.6.0"
gio         = "0.6.0"
glib        = "0.7.1"

[features]
default = ["cairo-rs/svg", "gtk/v3_24", "gdk-pixbuf/v2_36_8", "gdk/v3_24", "gio/v2_58", "glib/v2_58"]

[profile.release]
codegen-units = 1
lto = true

